# Chip8-Rust

./: Cargo.toml  README.md
src/: cpu.rs  execution.rs  main.rs  operation_codes.rs
